# smtp-tauri

./: .gitignore  Makefile  README.md  SMTP_NOTE.md  index.html  output.css  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: main.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  smtp.rs
src-tauri/src/smtp/: method.rs  structure.rs
src/components/: SmtpContent.vue  SmtpForm.vue
